--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*
 .photo, .profile, .contacts, 
 .technologies, .principal, 
 .contacts-to-languages {
@@ -5,14 +6,14 @@
     justify-content: center;
     align-items: center;
 }
-
+*/
 #container{
     display: grid;
     width: 100%;
     height: 95vh;
     margin: 0;
     padding: 0;
-    grid-template-columns: 20% 20% 30% 30%;
+    grid-template-columns: 40% 60%;
     grid-template-rows: 30% 70%;
 }
 
@@ -22,11 +23,29 @@
     grid-column-start: 1;
     grid-column-end: 2;
     justify-content: space-around;
+    
 }
 
+
 #item2{
-    background-color: blue;
-   grid-row: 1;
-   grid-column-start: 2;
-   grid-column-end: 4; 
+    background-color: rgb(177,221,244);
+    grid-row: 1;
+    grid-column-start: 2;
+    justify-content: space-around;
+    
+}
+
+#item3-4-5{
+    background-color: aqua;
+    grid-row: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    justify-content: space-around;
+}
+
+#item6{
+    background-color: rgb(177,221,244);
+    grid-row: 2;
+    grid-column-start: 2;
+    justify-content: space-around;
 }
