--- a/style.css
+++ b/style.css
@@ -1,51 +1,27 @@
-/*
-.photo, .profile, .contacts, 
-.technologies, .principal, 
-.contacts-to-languages {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-*/
 #container{
-    display: grid;
-    width: 100%;
-    height: 95vh;
     margin: 0;
     padding: 0;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: 30% 70%;
 }
 
-#item1{
-    background-color: aqua;
-    grid-row: 1;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    justify-content: space-around;
+img{
+    border-radius: 90%;
+}
+
+#uno_dos{
+    padding-top: 15px;
+    height: 20rem;
+}
+
+#dos{
+    background-color: rgb(177,221,244);
+    padding-left: 20px;
     
 }
 
-
-#item2{
+#madeseis{
     background-color: rgb(177,221,244);
-    grid-row: 1;
-    grid-column-start: 2;
-    justify-content: space-around;
+    padding-left: 20px;
+}
+
+
     
-}
-
-#item3-4-5{
-    background-color: aqua;
-    grid-row: 2;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    justify-content: space-around;
-}
-
-#item6{
-    background-color: rgb(177,221,244);
-    grid-row: 2;
-    grid-column-start: 2;
-    justify-content: space-around;
-}
