--- a/style.css
+++ b/style.css
@@ -23,5 +23,79 @@ img{
     padding-left: 20px;
 }
 
+#cuatro_cinco{
+    margin-bottom: 25px;
+}
 
-    
+@media (max-width: 719px){
+    #container{
+        display: grid;
+        width: 100%;
+        height: 95vh;
+        margin: 0;
+        padding: 0;
+        grid-template-columns: 1fr; /*1 columnas del 100%*/
+        grid-template-rows: repeat(7, 1fr);; /*7 filas de 1/7 cada una*/
+    }
+
+    #uno_dos{
+        display: grid;
+        width: 100%;
+        /*height: 95vh;*/
+        margin: 0;
+        padding: 0;
+        grid-template-columns: 1fr; /*1 columnas del 100%*/
+        grid-template-rows: repeat(7, 1fr);; /*7 filas de 1/7 cada una*/
+
+        padding-top: 15px;
+        height: 20rem;
+    }
+
+    #cuatro_cinco{
+        display: grid;
+        width: 100%;
+        height: 95vh;
+        margin: 0;
+        padding: 0;
+        grid-template-columns: 1fr; /*1 columnas del 100%*/
+        grid-template-rows: repeat(7, 1fr);; /*7 filas de 1/7 cada una*/
+    }
+
+    #cuatro_cinco{
+        margin-bottom: 25px;
+    }
+
+    #uno{
+        grid-row: 1;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        justify-content: space-around;
+    }
+
+    #dos{
+        grid-row: 2;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        justify-content: space-around;
+    }
+
+    #centro_c_c{
+        grid-row: 1;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        justify-content: space-around;
+    }
+
+    #madeseis{
+        grid-row: 2;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        justify-content: space-around;
+
+    }
+
+    #seis_tres{
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+    }
+}
